# KWCM_lab1_ZKramarczyk

./: README.md
src/: CMakeLists.txt  LaborkaConfig.h.in  main.cpp
src/Trygonometria/: CMakeLists.txt  trygonometria.cpp  trygonometria.h
